# foliage_finder

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  justfile  pyproject.toml  pyrightconfig.json  requirements.txt
scripts/: fetch_images.bash  opencv.bash  remove_augmented_images.bash
src/: __init__.py  main.py
src/classifier/: __init__.py  mlp.py  rnn.py
src/image_processing/: __init__.py  data_augmentation.py  display.py  extract_leaves.py  freeman_chain_code.py  local_binary_pattern.py  statistics.py
src/utils/: __init__.py  files.py  image.py
