[tool.poetry]
name = "foliage-finder"
version = "0.1.0"
description = ""
authors = ["Daniel Boll <danielboll.academico@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "foliage_finder"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
tk = "^0.1.0"
pyqt5 = "^5.15.9"
inquirer = "^3.1.3"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
